--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
 		"prepare": "svelte-kit sync || echo ''"
 	},
 	"devDependencies": {
-		"@skeletonlabs/skeleton": "^3.1.3",
-		"@skeletonlabs/skeleton-svelte": "^1.2.2",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"daisyui": "^5.0.37",
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"vite": "^6.2.6"
