FastAPI basic backend + Clean up
- Added basic FastAPI backend
- Cleaned up random `$inspects()`
- Changed README.md and starting scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"version": "0.0.1",
 	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+    "dev": "./start.sh",
+		"dev:frontend": "vite dev",
+    "dev:backend": "cd server && uv run fastapi dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''"
