--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ vite.config.ts.timestamp-*
 # Audio
 *.mp3
 
+# Claude
+CLAUDE.md
+
 # Backend
 ./server/__pycache__/
 server/__pycache__/main.cpython-310.pyc
