--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ CLAUDE.md
 # Backend
 ./server/__pycache__/
 server/__pycache__/main.cpython-310.pyc
+
+# Ignore all __pycache__ directories
+__pycache__/
+**/__pycache__/
+
+# Ignore compiled Python files
+*.py[cod]
