--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "python-dotenv>=1.1.0",
+    "supabase>=2.15.3",
 ]
