--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 	"dependencies": {
 		"@supabase/auth-ui-shared": "^0.1.8",
 		"@supabase/auth-ui-svelte": "^0.2.9",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.50.0",
 		"form-data": "^4.0.3",
 		"svelte-file-dropzone": "^2.0.9",
 		"undici": "^7.10.0"
